<resources>
    <string name="app_name">Andromia</string>

    <string name="navigation_drawer_open">Ouvrir le volet navigation</string>
    <string name="navigation_drawer_close">Fermer le volet navigation</string>
    <string name="nav_header_title">Navigation</string>
    <string name="nav_header_subtitle">Andromia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Se déconnecter</string>

    <string name="login">Connexion</string>
    <string name="andromia">Andromia</string>
    <string name="hint_email">Entrez votre courriel</string>
    <string name="hint_password">Entrez votre mot de passe</string>
    <string name="back">Retour</string>
    <string name="login_no_account">Vous n\'avez pas de compte?</string>
    <string name="create_account">Créer un compte</string>
    <string name="confirm">Confirmer</string>
    <string name="hint_name">Veuillez entrer votre nom</string>
    <string name="hint_confirm_password">Veuillez confirmer votre mot de passe</string>

    <string name="weapon">Weapons</string>
    <string name="abilities">Abilities</string>
    <string name="ultimate">Ultimate</string>
    <string name="nomUnit">Nom: </string>
    <string name="numberUnit">Number: </string>
    <string name="setUnit">Set: </string>
    <string name="affinityResult">Affinity: </string>
    <string name="lifeResult">Life: </string>
    <string name="speedResult">Speed: </string>
    <string name="weaponsResult">Weapons: </string>
    <string name="abilitiesResult">Abilities: </string>
    <string name="cout">Coût</string>
    <string name="runesAcquise">Runes acquises</string>


    <string name="emplacementDepart">Départ: </string>
    <string name="emplacementArrivee">Arrivée: </string>
    <string name="dateExploration">Date: </string>

    <string name="rune">Rune</string>
    <string name="fermer">Fermer</string>
    <string name="type">Type</string>
    <string name="quantite">Quantité</string>

    <string name="emplacement">Emplacement :</string>
    <string name="mes_runes">Mes runes</string>
    <string name="explorer">Explorer</string>
    <string name="unit_s">Unités</string>
    <string name="explorations">Explorations</string>
    <string name="error_happened_please_reconnect">Une erreur est survenue, veuillez vous reconnecter</string>
    <string name="scan_exploration">Scanner votre prochaine exploration</string>
    <string name="exploration_cancelled">Exploration annulée!</string>
    <string name="pwd_cannot_blank">Le mot de passe ne peut pas être vide</string>
    <string name="email_format_invalid">Le format du courriel est invalide</string>
    <string name="email_or_pwd_invalid">Votre courriel ou mot de passe est invalide</string>
    <string name="connection_unavailable">Connexion au serveur impossible</string>
    <string name="name_cannot_blank">Le nom ne peut pas être vide</string>
    <string name="confirm_pwd">Veuillez confirmer votre mot de passe</string>
    <string name="pwd_not_same">Les mots de passe ne sont pas identiques</string>
    <string name="pwd_must_be_x_char">Le mot de passe doit être au minimum 8 caractères de long</string>

</resources>
