<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreationCompteActivity"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/andromia" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <EditText
            android:id="@+id/signup_et_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:background="@drawable/black_rounded"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/hint_name"
            android:layout_marginBottom="15dp">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/signup_et_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/signup_et_name"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:background="@drawable/black_rounded"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/hint_email"
            android:layout_marginBottom="15dp">
        </EditText>

        <EditText
            android:id="@+id/signup_et_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/signup_et_email"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/black_rounded"
            android:hint="@string/hint_password"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/signup_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/signup_et_password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/black_rounded"
            android:hint="@string/hint_confirm_password"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/signup_btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/signup_et_confirm_password"
            android:textSize="20sp"
            android:text="@string/confirm"
            android:background="@drawable/primary_rounded"/>

    </RelativeLayout>


</LinearLayout>