<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="85dp"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_rune"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/rune"/>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center|top">

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/rune_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:textAppearance="?attr/textAppearanceListItem" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center|top">

            <TextView
                android:id="@+id/qte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantite" />

            <TextView
                android:id="@+id/rune_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/qte"
                android:textAppearance="?attr/textAppearanceListItem" />
        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
