<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <RelativeLayout
    android:id="@+id/UnitResultatExploration"
    android:layout_width="match_parent"
    android:layout_height="280dp">

        <ImageView
            android:id="@+id/resultat_imgUnit"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"/>

        <TextView
        android:id="@+id/lbl_resultat_TitreNom"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/nomUnit"
        android:textColor="@color/cardview_light_background"
        android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_nomUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_toEndOf="@id/lbl_resultat_TitreNom"/>

        <TextView
        android:id="@+id/lbl_resultat_TitreAffinity"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:text="@string/affinityResult"
        android:textColor="@color/cardview_light_background"
        android:layout_below="@id/lbl_resultat_TitreNom"
        android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_AffinityUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreNom"
            android:layout_toEndOf="@id/lbl_resultat_TitreAffinity"/>

        <TextView
            android:id="@+id/lbl_resultat_TitreLife"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/lifeResult"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreAffinity"
            android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_LifeUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreAffinity"
            android:layout_toEndOf="@id/lbl_resultat_TitreLife"/>

        <TextView
            android:id="@+id/lbl_resultat_TitreSpeed"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/speedResult"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreLife"
            android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_SpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_LifeUnit"
            android:layout_toEndOf="@id/lbl_resultat_TitreSpeed"/>

        <TextView
            android:id="@+id/lbl_resultat_TitreWeapon"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/weaponsResult"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreSpeed"
            android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_WeaponUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_SpeedUnit"
            android:layout_toEndOf="@id/lbl_resultat_TitreWeapon"/>

        <TextView
            android:id="@+id/lbl_resultat_TitreAbility"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/abilitiesResult"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_TitreWeapon"
            android:layout_toEndOf="@id/resultat_imgUnit"/>

        <TextView
            android:id="@+id/lbl_resultat_AbilityUnit"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/lbl_resultat_WeaponUnit"
            android:layout_toEndOf="@id/lbl_resultat_TitreAbility"/>

        <RelativeLayout
            android:layout_width="325dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorAccent"
            android:layout_below="@id/lbl_resultat_TitreAbility">

            <TextView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/cout"/>

        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/runesAcquises"
        android:layout_width="325dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/UnitResultatExploration">

    </RelativeLayout>

    <Button
        android:id="@+id/exploration_resultat_btn_Terminer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Terminer"
        android:layout_below="@id/runesAcquises"
        android:background="@drawable/primary_rounded"/>

    <Button
        android:id="@+id/exploration_resultat_btn_Capturer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Capturer"
        android:layout_toEndOf="@id/exploration_resultat_btn_Terminer"
        android:layout_below="@id/runesAcquises"
        android:background="@drawable/primary_rounded"/>

    <Button
        android:id="@+id/exploration_resultat_btn_affficher_runes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/primary_rounded"
        android:text="@string/mes_runes"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/exploration_resultat_btn_Capturer"
        android:layout_below="@id/runesAcquises"/>

</RelativeLayout>
