<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/emplacement_explorateur_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.EmplacementExplorateurFragment"
    android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/emplacement_explorateur_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/andromia"
                android:contentDescription="@string/andromia" />

            <ImageView
                android:id="@+id/emplacement_explorateur_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/emplacement_Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/emplacement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emplacement"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/emplacement_explorateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Andromia"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emplacement_Container"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:gravity="center|top">

                <Button
                    android:id="@+id/emplacement_explorateur_btn_explorer"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explorer"
                    android:background="@drawable/primary_rounded"/>

                <Button
                    android:id="@+id/emplacement_explorateur_btn_afficher_runes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/mes_runes"
                    android:background="@drawable/primary_rounded"/>

            </RelativeLayout>

        </RelativeLayout>

</LinearLayout>