<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">



        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgUnitList"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <TextView
                android:id="@+id/lblTitreChamp1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/nomUnit"
                android:layout_gravity="center"
                android:layout_toEndOf="@id/imgUnitList"/>

            <TextView
                android:id="@+id/lblChamp1List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_toEndOf="@id/lblTitreChamp1"/>

            <TextView
                android:id="@+id/lblTitreChamp2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/numberUnit"
                android:layout_gravity="center"
                android:layout_toEndOf="@id/imgUnitList"
                android:layout_below="@id/lblChamp1List"/>

            <TextView
                android:id="@+id/lblChamp2List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/lblTitreChamp2"
                android:layout_below="@id/lblChamp1List"/>

            <TextView
                android:id="@+id/lblTitreChamp3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/setUnit"
                android:layout_gravity="center"
                android:layout_toEndOf="@id/imgUnitList"
                android:layout_below="@id/lblTitreChamp2"/>

            <TextView
                android:id="@+id/lblChamp3List"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/lblTitreChamp3"
                android:layout_below="@id/lblChamp2List"/>


        </RelativeLayout>


</android.support.v7.widget.CardView>