<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >


    <ImageView
        android:id="@+id/imgDetailUnitDetail"
        android:layout_width="240dp"
        android:layout_height="220dp"
        android:layout_below="@+id/lblNomUnitDetail"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent" />

    <ImageView
        android:id="@+id/imgAffinityDetail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_toStartOf="@+id/lblLifeDetail" />

    <TextView
        android:id="@+id/lblNomUnitDetail"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imgDetailUnitDetail"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLifeDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imgDetailUnitDetail"
        android:layout_alignTop="@+id/lblLifeDetail"
        android:src="@drawable/hearts_green" />

    <TextView
        android:id="@+id/lblLifeDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:foregroundGravity="center"
        android:textColor="@color/cardview_dark_background"
        android:layout_below="@id/imgDetailUnitDetail"
        android:layout_toEndOf="@id/imgLifeDetail"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/imgSpeedDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/imgDetailUnitDetail"
        android:src="@drawable/cycle"
        android:layout_toEndOf="@id/lblLifeDetail"
        />

    <TextView
        android:id="@+id/lblSpeedDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/cardview_dark_background"
        android:foregroundGravity="center"
        android:layout_below="@id/imgDetailUnitDetail"
        android:layout_toEndOf="@id/imgSpeedDetail"
        android:gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_below="@id/imgLifeDetail" />

     <TextView
        android:id="@+id/lblWeaponDetail"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="@string/weapon"
         android:layout_marginTop="3dp"
         android:layout_marginStart="35dp"
         android:textColor="@color/cardview_dark_background"
         android:textStyle="bold"
         android:layout_below="@id/imgSpeedDetail"/>


    <ImageView
        android:id="@+id/imgWeapon1Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/lblWeaponDetail"/>

    <ImageView
        android:id="@+id/imgWeapon2Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/imgWeapon1Detail"
        android:layout_below="@id/lblWeaponDetail"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_below="@id/imgWeapon1Detail" />

    <TextView
        android:id="@+id/lblAbilitiesDetail"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imgWeapon1Detail"
        android:text="@string/abilities"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgAbility1Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/lblAbilitiesDetail"/>

    <ImageView
        android:id="@+id/imgAbility2Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/imgAbility1Detail"
        android:layout_below="@id/lblAbilitiesDetail"/>

    <ImageView
        android:id="@+id/imgAbility3Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/imgAbility2Detail"
        android:layout_below="@id/lblAbilitiesDetail"/>

    <ImageView
        android:id="@+id/imgAbility4Detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/imgAbility3Detail"
        android:layout_below="@id/lblAbilitiesDetail"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_below="@id/imgAbility1Detail" />

    <TextView
        android:id="@+id/lblUltimateDetail"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="@string/ultimate"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/imgAbility1Detail"/>

    <ImageView
        android:id="@+id/imgUltimateDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/lblUltimateDetail"/>

    <TextView
        android:id="@+id/lblSetDetail"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/cardview_dark_background"
        android:layout_below="@id/lblUltimateDetail"
        />

    <TextView
        android:id="@+id/lblNumberDetail"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginTop="36dp"
        android:layout_toStartOf="@id/lblSetDetail"
        android:layout_below="@id/lblUltimateDetail"/>

</RelativeLayout>

